--- a/movies.html
+++ b/movies.html
@@ -13,6 +13,27 @@
   </div>
 
   <!-- Put the Firebase config here -->
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-firestore.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCAadqhstZKIyUASPx0RG5UJ1855k-jpPE",
+    authDomain: "kiei-451-1503f.firebaseapp.com",
+    projectId: "kiei-451-1503f",
+    storageBucket: "kiei-451-1503f.appspot.com",
+    messagingSenderId: "501174795842",
+    appId: "1:501174795842:web:f500688ae6dd97b90db7db"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
 
   <script src="movies.js"></script>
 </body>
